I think I'm very close

--- a/index.html
+++ b/index.html
@@ -5,10 +5,125 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  
+<div class="row1">
+  <div class="card one" style="width: 18rem;">
+    <h2 class="card-title">Birthday</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtDoKCp4g9-svLwdry95Zm9qQtKCJTT3XykRCLSnql-Fy4wtR9D2ASxa1IkINcxaMB9Pw&usqp=CAU" class="card-img-one" alt="a card with a present tied to ballons">
+    <div class="card-body">
+      <div class="section1">
+      <div class="card-description">Celebrate someone's birthday with this card!</div>
+      <div class="availability">available</div>
+      </div>
+      <div class="section2">
+        <h5 class="specs">Specifications</h5>
+        <p>size: 5"x7"</p>
+        <p>weight: 2oz. </p>
+        <footer class="valid">valid until 12/31/2022</footer>
+      </div>
+      <div class="section3">
+        <h5 class="price">Pricing</h5>
+        <p>1: $4.99</p>
+        <p>2-50: $4.50</p>
+        <p>51+: $4.00</p>
+      </div>
+    </div>
+  </div>
+  <div class="card two" style="width: 18rem;">
+    <h2 class="card-title">Baby Shower</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9Xv0Ck5n4M--eeKf2cDE9Oq4OTjuZhGxehXcrZmNIjjXWPpeyxZQjPaXGMgvMzzZzFoE&usqp=CAU" class="card-img-two" alt="card with sleeping baby">
+    <div class="card-body">
+      <div class="section1">
+      <div class="card-description">This is great card to take to baby shower!</div>
+      <div class="availability">available</div>
+      </div>
+      <div class="section2">
+        <h5 class="specs">Specifications</h5>
+        <p>size: 5"x7"</p>
+        <p>weight: 2oz. </p>
+        <footer class="valid">valid until 12/31/2022</footer>
+      </div>
+      <div class="section3">
+        <h5 class="price">Pricing</h5>
+        <p>1: $4.99</p>
+        <p>2-50: $4.50</p>
+        <p>51+: $4.00</p>
+      </div>
+    </div>
+  </div>
+  <div class="card three" style="width: 18rem;">
+    <h2 class="card-title">Wedding Shower</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRw29menRf2Nsp372hngZSsr27p0rD01puewQ&usqp=CAU" class="card-img-three" alt="an umbrella with words">
+    <div class="card-body">
+      <div class="section1">
+      <div class="card-description">Nothing says "I do." like a card and a gift.</div>
+      <div class="availability">available</div>
+      </div>
+      <div class="section2">
+        <h5 class="specs">Specifications</h5>
+        <p>size: 5"x7"</p>
+        <p>weight: 2oz. </p>
+        <footer class="valid">valid until 12/31/2022</footer>
+      </div>
+      <div class="section3">
+        <h5 class="price">Pricing</h5>
+        <p>1: $4.99</p>
+        <p>2-50: $4.50</p>
+        <p>51+: $4.00</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row2">
+  <div class="card four" style="width: 18rem;">
+    <h2 class="card-title">Mother's Day</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjbnt4YGq1TdeMJGTySvUSqaF1hpv2jekgkw&usqp=CAU" class="card-img-four" alt="card with a mom on it">
+    <div class="card-body">
+      <div class="section1">
+      <div class="card-description">Show your mom some love with this card!</div>
+      <div class="availability">available</div>
+      </div>
+      <div class="section2">
+        <h5 class="specs">Specifications</h5>
+        <p>size: 5"x7"</p>
+        <p>weight: 2oz. </p>
+        <footer class="valid">valid until 12/31/2022</footer>
+      </div>
+      <div class="section3">
+        <h5 class="price">Pricing</h5>
+        <p>1: $4.99</p>
+        <p>2-50: $4.50</p>
+        <p>51+: $4.00</p>
+      </div>
+    </div>
+  </div>
+  <div class="card five" style="width: 18rem;">
+    <h2 class="card-title">Father's Day</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKkgR9873O1YEb5JtA6fs20qYlGHDC5Ld0UA&usqp=CAU" class="card-img-five" alt="card with a cactus with a mustache">
+    <div class="card-body">
+      <div class="section1">
+      <div class="card-description">Don't forget about dear ol' dad on his special day!</div>
+      <div class="availability">available</div>
+      </div>
+      <div class="section2">
+        <h5 class="specs">Specifications</h5>
+        <p>size: 5"x7"</p>
+        <p>weight: 2oz. </p>
+        <footer class="valid">valid until 12/31/2022</footer>
+      </div>
+      <div class="section3">
+        <h5 class="price">Pricing</h5>
+        <p>1: $4.99</p>
+        <p>2-50: $4.50</p>
+        <p>51+: $4.00</p>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 </body>
 </html>
