This is the final before the challenges

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="card-body">
       <div class="section1">
       <div class="card-description">Celebrate someone's birthday with this card!</div>
-      <div class="availability">available</div>
+      <div class="availability end">available</div>
       </div>
       <div class="section2">
         <h5 class="specs">Specifications</h5>
@@ -38,7 +38,7 @@
     <div class="card-body">
       <div class="section1">
       <div class="card-description">This is great card to take to baby shower!</div>
-      <div class="availability">available</div>
+      <div class="availability end">available</div>
       </div>
       <div class="section2">
         <h5 class="specs">Specifications</h5>
@@ -60,7 +60,7 @@
     <div class="card-body">
       <div class="section1">
       <div class="card-description">Nothing says "I do." like a card and a gift.</div>
-      <div class="availability">available</div>
+      <div class="availability end">available</div>
       </div>
       <div class="section2">
         <h5 class="specs">Specifications</h5>
@@ -84,7 +84,7 @@
     <div class="card-body">
       <div class="section1">
       <div class="card-description">Show your mom some love with this card!</div>
-      <div class="availability">available</div>
+      <div class="availability end">available</div>
       </div>
       <div class="section2">
         <h5 class="specs">Specifications</h5>
@@ -106,7 +106,7 @@
     <div class="card-body">
       <div class="section1">
       <div class="card-description">Don't forget about dear ol' dad on his special day!</div>
-      <div class="availability">available</div>
+      <div class="availability end">available</div>
       </div>
       <div class="section2">
         <h5 class="specs">Specifications</h5>
